k8s/michaelsmithxyz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: michaelsmithxyz
  annotations:
    cert-manager.io/cluster-issuer: michaelsmithxyz-issuer
spec:
  tls:
    - hosts:
        - k8s.michaelsmith.xyz
        - www.michaelsmith.xyz
        - michaelsmith.xyz
        - smith.pizza
      secretName: michaelsmithxyz-private-key
  rules:
    - host: michaelsmith.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: michaelsmithxyz
                port:
                  number: 80
    - host: www.michaelsmith.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: michaelsmithxyz
                port:
                  number: 80
    - host: smith.pizza
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smithdotpizza
                port:
                  number: 80
